--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,11 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
 
+    // Navigation
+    def nav_compose_version = "1.0.0-alpha09"
+    implementation "androidx.navigation:navigation-compose:$nav_compose_version"
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.3.4'
+
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
